# jobs-data-analyzer

./: .gitignore  Changelog.md  GIT-IT.md  LICENSE  README.md  READMENOT.md  ecosystem.config.js  package-lock.json  package.json  packages.txt  pyproject.toml  servers.md  spider.py  temp.sh
.circleci/: config.yml
.github/workflows/: codeql.yml  main.yml  python-package-conda.yml
APIs/exp-API/: README.md  app.js  package-lock.json
APIs/exp-API/config/: project.js
APIs/exp-API/routes/: api.js
APIs/exp-API/views/: index.ejs
APIs/py-API/: __init__.py  views.py
JDA-12/: README.md  __init__.py  config.py  dev-requirements.txt  models.py  tableau_dev_prog  views.py
JDA-12/data-API/: README.md  package 2.json  scratch.js
JDA-12/data-API/public/stylesheets/: style.css
JDA-12/data-API/routes/: api.js  index.js
JDA-12/data-API/views/: about.ejs  api.ejs
JDA-12/templates/: index.html
JDA-12/v1/: README.md  app.js  package-lock.json  package.json
JDA-12/v1/config/: site.js
JDA-12/v1/public/: echarts.min.js  main.js  style.css
JDA-12/v1/routes/: index.js  users.js
JDA-12/v1/views/: index.ejs
JDA-12/v1/views/partials/: chart.ejs  footer.ejs  header.ejs
tests/: README.md  __init__.py
tests/backend/: __init__.py
tests/frontend/: __init__.py
tests/unit/: __init__.py
