[tool.poetry]
name = "JDA"
version = "0.1.0"
description = "A jobs-data analyzer: Improved models for a simple jobs-search."
authors = ["Levis Agaba <alevis@protonmail.com>"]
readme = "README.md"
packages = [{include = "venv/lib/python3.7/site-packages"}]

[tool.poetry.scripts]
waitress = "waitress-serve --host 127.0.0.1 JDA-12:jda"

[tool.poetry.dependencies]
python = "^3.7"
pendulum = "^2.1.2"
requests = "^2.28.1"
flask = "^2.2.2"
gunicorn = "^20.1.0"
flask-sqlalchemy = "^3.0.2"
flask-wtf = "^1.0.1"
flask-praetorian = "^1.4.0"
flask-login = "^0.6.2"
flask-bootstrap = "^3.3.7.1"
waitress = "^2.1.2"
uwsgi = "^2.0.21"
flask-admin = "^1.6.0"
flask-socketio = "^5.3.2"
flask-restx = "^1.0.3"
boto3 = "^1.26.45"
pyspark = "^3.3.1"
scrapy = "^2.7.1"
plotly = "5.12.0"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
